services and factory pdf ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=parking-services
 server.port=8001
 server.address=0.0.0.0
-server.servlet.context-path=/services
+server.contextPath=/services
 
 #Logs configurations
 logging.level.org.springframework.security=ERROR
