add my ip aws to proyect data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
 
-spring.datasource.url=jdbc:mysql://186.87.135.186:3306/parking2?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=SYSTEM
-spring.datasource.password=MANAGER*
+spring.datasource.url=jdbc:mysql://18.221.245.161:3306/parking2?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=otherside
+spring.datasource.password=otherside2
