--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 
 
-spring.datasource.url=jdbc:mysql://18.221.245.161:3306/parking2?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=otherside
-spring.datasource.password=otherside2
+spring.datasource.url=jdbc:mysql://18xx.221xxx.245xx.161x:3306xx/parking2xxx?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=xxxxx
+spring.datasource.password=xxxxx
